--- a/clean-folders/source/info.plist
+++ b/clean-folders/source/info.plist
@@ -339,7 +339,7 @@ fi</string>
 				<key>argumenttype</key>
 				<integer>2</integer>
 				<key>keyword</key>
-				<string>trash desktop</string>
+				<string>trashdesk</string>
 				<key>subtext</key>
 				<string></string>
 				<key>text</key>
@@ -432,7 +432,7 @@ Post any issues and feature requests you have there. 💜</string>
 		</dict>
 	</dict>
 	<key>version</key>
-	<string>2.1.3</string>
+	<string>2.1.4</string>
 	<key>webaddress</key>
 	<string>https://github.com/nikitavoloboev/small-workflows</string>
 </dict>
